# turbosim

./: .gitignore  Jenkinsfile  conanfile.py  docker-compose.yml  workspace.code-workspace
conan/profiles/: default
plots/: convergence.gp  operating_line.gp  stage_values.gp
resources/perf_maps/: compressor_eff.tsv  compressor_pi.tsv  turbine_eff.tsv  turbine_pi.tsv
resources/setups/: single_spool_setup_initial_params.tsv
src/: App.hpp  CMakeLists.txt  Kernel.hpp  Tests.cpp  Tests.hpp  main.cpp
src/Analysis/: ConvergenceAnalysis.hpp
src/Analysis/ConvergenceAnalysis/Application/: ConvergenceAnalysis.hpp
src/Analysis/ConvergenceAnalysis/Infrastructure/: ConvergenceAnalysisController.hpp
src/Analysis/Infrastructure/: ConvergenceAnalysisController.hpp
src/Analysis/IterateUntilConverged/Application/: IterateUntilConverged.hpp
src/Analysis/IterateUntilConverged/Infrastructure/: IterateUntilConvergedController.hpp
src/Analysis/OperatingLineAnalysis/Application/: OperatingLineAnalysis.hpp
src/Analysis/OperatingLineAnalysis/Infrastructure/: OperatingLineAnalysisController.hpp
src/Boundary/: Boundary.hpp
src/Boundary/AxialBoundary/: AxialBoundary.hpp  AxialBoundaryFactory.hpp
src/Boundary/FluidBoundary/: FluidBoundary.hpp  FluidBoundaryFactory.hpp
src/Component/: Component.cpp  Component.hpp  ComponentRegister.hpp
src/Component/Boundary/AxialBoundary/: AxialBoundary.hpp  AxialBoundaryFactory.hpp
src/Component/Boundary/FluidBoundary/: FluidBoundary.hpp  FluidBoundaryFactory.hpp
src/Component/Combustor/: Combustor.hpp  CombustorFactory.hpp
src/Component/Connector/: Connector.hpp  FluidConnector.hpp
src/Component/Tank/: Tank.hpp  TankFactory.hpp
src/Component/Turbine/: FilePerformanceMap.cpp  FilePerformanceMap.hpp  PerformanceMap.hpp  Turbine.cpp  Turbine.hpp  TurbineFactory.hpp
src/Math/Algebra/GradientDescent/: GradientDescent.hpp  NewtonMethod.hpp
src/Math/Algebra/Jacobian/: JacobianCalculator.cpp  JacobianCalculator.hpp
src/Math/Algebra/NewtonMethod/: NewtonMethod.hpp
src/Math/Constraint/: Constraint.cpp  Constraint.hpp  ConstraintRegister.hpp
src/Math/Parameter/: Parameter.cpp  Parameter.hpp  ParameterRegister.hpp
src/Setups/: SingleSpoolSetup.hpp
src/locale/: hello.pot
src/locale/ca/: hello.po
src/locale/en/: hello.po
src/locale/es/: hello.po
src/locale/ru/: hello.po
