CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT(HelloWorld)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CONAN_SYSTEM_INCLUDES ON)
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)

SET(CMAKE_CXX_FLAGS "-fdiagnostics-color=always -Wall -Wpedantic -Wextra")

conan_basic_setup()

SET(Boost_USE_STATIC_LIBS OFF)
FIND_PACKAGE(Boost 1.69.0 REQUIRED locale filesystem)
FIND_PACKAGE(Gettext REQUIRED)
set(LANGUAGES en es ca ru)
set(GETTEXT_DOMAINS hello)
include(Gettext_helpers.cmake)

configure_gettext(
	DOMAIN hello
	TARGET_NAME translations_hello
	SOURCES **.cpp
	POTFILE_DESTINATION locale
	POFILE_DESTINATION locale
	GMOFILE_DESTINATION locale
	INSTALL_DESTINATION locale
	LANGUAGES ${LANGUAGES}
	ALL
	XGETTEXT_ARGS --keyword=translate:1,1t --keyword=translate:1,2,3t
)


SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}/bin)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
ADD_EXECUTABLE(greet main.cpp)

TARGET_LINK_LIBRARIES(greet ${Boost_LIBRARIES} dl)


