CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

PROJECT(HelloWorld)
SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CONAN_SYSTEM_INCLUDES ON)
include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)

SET(CMAKE_CXX_FLAGS "-fdiagnostics-color=always -Wall -Wpedantic -Wextra")

conan_basic_setup()




SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_BINARY_DIR}/bin)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_BINARY_DIR}/bin)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY})

include_directories(${PROJECT_SOURCE_DIR})
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
FILE(GLOB_RECURSE CPP_SRC ${PROJECT_SOURCE_DIR}/*.cpp)
ADD_EXECUTABLE(greet main.cpp ${CPP_SRC})

TARGET_LINK_LIBRARIES(greet)


